* Moved default SERVERLIST location to I-I's site. * Updated a few variable names.

--- a/res/clientconfigs.ini
+++ b/res/clientconfigs.ini
@@ -1,9 +1,9 @@
 [CONFIG]
 ; Enable debug mode?
-DEBUG=TRUE
+DEBUG=false
 
 ; Server List URL
-SERVERLIST=http://langfordenterprises.com/destinyservers.txt
+SERVERLIST=http://destiny.industrial-illusions.net/destinyservers.txt
 
 ; Connection Port
 PORT=7002
