Added FLY client mechanics  - "feature" courtesy of https://forum.ragezone.com/f705/release-client-server-pokemon-green-1047805/
Signed-off-by: Akkarinage <akkarin@rathena.org>

--- a/res/clientconfigs.ini
+++ b/res/clientconfigs.ini
@@ -1,6 +1,6 @@
 [CONFIG]
 ; Enable debug mode?
-DEBUG=false
+DEBUG=true
 
 ; Server List URL
 SERVERLIST=http://destiny.industrial-illusions.net/destinyservers.txt
